# CurrencyConverterUtil

./: CMakeLists.txt  CMakePresets.json  README.md
include/: CurConverter.h
src/: CurConverter.cpp  main.cpp
